--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15sp"
-    android:layout_marginBottom="2sp"
+    android:layout_marginBottom="20dp"
     android:background="@color/colorAccent"
     >
 
