--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:paddingBottom="20dp">
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/colorPrimary"
         android:drawableStart="@drawable/ic_play_arrow"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text=""
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        app:cornerRadius="16dp" />
 </FrameLayout>
