--- a/app/src/main/res/layout/fragment_feel_when.xml
+++ b/app/src/main/res/layout/fragment_feel_when.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/dateTv"
-        android:layout_width="281dp"
+        android:layout_width="280dp"
         android:layout_height="38dp"
         android:gravity="center_horizontal"
         android:text=""
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.268" />
+        app:layout_constraintVertical_bias="0.28" />
 
     <TextView
         android:id="@+id/textView"
@@ -36,44 +36,43 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/NextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
         android:text="@string/AddFeeling"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.951" />
+        app:layout_constraintVertical_bias="0.95" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        app:cornerRadius="16dp"
         android:id="@+id/buttonToday"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorPrimary"
         android:text="@string/Today"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.539"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.42" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        app:cornerRadius="16dp"
         android:id="@+id/pickDateBtn"
         android:layout_width="270dp"
         android:layout_height="80dp"
-        android:background="?attr/colorPrimary"
         android:text="@string/OtherTime"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonToday"
-        app:layout_constraintVertical_bias="0.169" />
+        app:layout_constraintVertical_bias="0.16" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
