--- a/app/src/main/res/layout/rotary_knob_view.xml
+++ b/app/src/main/res/layout/rotary_knob_view.xml
@@ -7,5 +7,5 @@
         android:id="@+id/knobImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:contentDescription="@string/emotion_wheel_description" />
 </merge>
